wp_derive/tests/error_unexpected_wp_context_meta_variant_name_value.stderr
error: Expected #[WPContext("edit", "embed", "view")]. Did you forget to add context literals?
 --> tests/error_unexpected_wp_context_meta_variant_name_value.rs:5:7
  |
5 |     #[WPContext = "baz"]
  |       ^^^^^^^^^
