wp_derive/tests/error_unexpected_wp_context_meta_variant_name_value.rs
use wp_derive::WPContextual;

#[derive(WPContextual)]
pub struct SparseFoo {
    #[WPContext = "baz"]
    pub bar: Option<u32>,
}

fn main() {}

uniffi::setup_scaffolding!("wp_derive");
